# AutoML-rossmann

./: .gitignore  README.md  Rossman full research.ipynb  custom_pipeline.py  eda copy.ipynb  eda.ipynb  lama_baselines.ipynb  lama_tr.csv  lightgbm_base.csv  lightgbm_target_encoding.csv  lightgbm_target_encoding_1300.csv  pyproject.toml  submission_lama1.csv  submission_lama2.csv  submission_lama_final.csv  tutorial_11_time_series.py
draft-code/: lama_baselines.ipynb
reports/custom_report.html/: lama_interactive_report.html
reports/fast_report.html/: lama_interactive_report.html
submissions/: lama_tr2.csv  lightgbm_autoregressive.csv  lightgbm_optuna.csv  no_StoreDowMean.csv
