[project]
name = "automl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightautoml>=0.4.1",
    "nltk>=3.9.2",
    "optuna>=4.6.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
